--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ python-dotenv==1.1.0
 aiohttp==3.12.13
 asyncpg==0.30.0
 requests>=2.32.4
-pyrogram==2.0.106
+pyrogram @ git+https://github.com/pyrogram/pyrogram.git
 tgcrypto==1.2.5
 pytz>=2025.2
